--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>
+      Title
+    </title>
+  </head>
+  <body>
+    <p>
+      Body
+    </p>
+  </body>
+</html>
